profile image responsive

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -73,6 +73,14 @@ input, select, textarea {
 
 /* own */
 
+.profile.image { 
+	border: solid 2px #fff;
+	border-radius: 50%;
+	max-width: 350px;
+	max-height: 350px;
+	object-fit: cover; 
+}
+
 .icon-header-pic {
     display: flex;
     align-items: center;
