no phone border altough phone optimized

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2357,8 +2357,7 @@ input, select, textarea {
 			}
 
 			.image.phone .inner, .image.phone:before, .image.phone:after {
-				display: block;
-				border: solid 2px rgba(255, 255, 255, 0.25);
+				display: none;
 			}
 
 			.image.phone .inner {
