--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2350,7 +2350,6 @@ input, select, textarea {
 		}
 
 			.image.phone img {
-				border-radius: 0;
 				display: block;
 				position: relative;
 				width: 100%;
@@ -2367,19 +2366,19 @@ input, select, textarea {
 				}
 
 				.image.phone .inner:before {
-					top: -1.375em;
+					top: -0.375em;
 					margin-left: -1em;
-					width: 2em;
-					height: 0.25em;
-					border-radius: 0.5em;
+					width: 1em;
+					height: 0.12em;
+					border-radius: 0.25em;
 					background: rgba(255, 255, 255, 0.25);
 				}
 
 				.image.phone .inner:after {
-					bottom: -2.75em;
-					margin-left: -1em;
-					width: 2em;
-					height: 2em;
+					bottom: -1.75em;
+					margin-left: -.5em;
+					width: 1em;
+					height: 1em;
 					border-radius: 100%;
 					border: solid 2px rgba(255, 255, 255, 0.25);
 				}
@@ -2389,14 +2388,14 @@ input, select, textarea {
 			}
 
 			.image.phone:before {
-				height: 2.5em;
-				border-radius: 1em 1em 0 0;
+				height: 1em;
+				border-radius: .5em .5em 0 0;
 				border-bottom: 0;
 			}
 
 			.image.phone:after {
-				height: 3.5em;
-				border-radius: 0 0 1em 1em;
+				height: 2em;
+				border-radius: 0 0 .5em .5em;
 				border-top: 0;
 			}
 
