--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -4,6 +4,6 @@
     <title>Page Title</title>
 </head>
 <body>
-    <img src="" alt="image">
+    <img src="https://raw.githubusercontent.com/rndae/custom-bulk-emailer/1ee8f8841eb796318d04d5020a6cd0582cc6ec03/1x1_verify.gif?utm_source=cigartv&utm_medium=email&utm_campaign=outreach&utm_id=email-read" width="1" height="1" alt="">
 </body>
 </html>
